--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -26,7 +26,8 @@
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
 
-     
+      <h1> {{page.title}}</h1>
+
       {{ content }}
 
       {% if site.github.private != true and site.github.license %}
